// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text field loading loading 1`] = `
<div>
  <TextField
    required={false}
    select={false}
  />
  <WithTheme(Fade)
    in={true}
  >
    <WithStyles(LinearProgress)
      color="secondary"
    />
  </WithTheme(Fade)>
</div>
`;

exports[`Text field loading render 1`] = `
<div>
  <TextField
    required={false}
    select={false}
  />
  <WithTheme(Fade)
    in={false}
  >
    <WithStyles(LinearProgress)
      color="secondary"
    />
  </WithTheme(Fade)>
</div>
`;
